--- a/core/templates/qrcode.html
+++ b/core/templates/qrcode.html
@@ -9,6 +9,7 @@
     <p>Для входа в приложение вам необходимо сканировать этот QR-код.</p>
     <p>Пользователь {{ user.username }}</p>    
     <img src="{{ qr_code.image_url }}" alt="QR-Code" />
-    <p><a class="nav-link" href="{% url 'create_qr_code' username=user.username %}">Создать QR-Code</a></p>
+    <p><a class="nav-link" href="{% url 'create_qrcode' username=user.username %}">Создать QR-Code</a></p>
+    <p><a class="nav-link" href="{% url 'check_qrcode' username=user.username %}">Проверить OTP</a></p>
 </body>
 </html>
